--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ div.rosy:hover {
 
 
 div.green {
-  background-color: darkseagreen;
+  background-color: rgb(143, 188, 149);
 }
 
 div.green:hover {
